--- a/application/backend/src/main/resources/libs/bulma/components/tabs/tabs.html
+++ b/application/backend/src/main/resources/libs/bulma/components/tabs/tabs.html
@@ -45,7 +45,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="px-2" id="tab-content">
+                    <div class="px-2 tabs-content">
                         <sly data-sly-list="${resource.children}">
                             <sly data-sly-test="${item.resourceType == 'bulma/components/tabs/tab'}">
                                 <sly data-sly-test="${item.hasChildren}">
