--- a/application/backend/src/main/resources/libs/bulma/components/tabs/tab/tab.html
+++ b/application/backend/src/main/resources/libs/bulma/components/tabs/tab/tab.html
@@ -24,11 +24,12 @@
                     <ul>
                         <sly data-sly-list="${parent.children}">
                             <sly data-sly-test="${item.resourceType == 'bulma/components/tabs/tab'}">
-                                <li class="${model.label == item.label ? 'is-active' : ''}"
+                              <sly data-sly-test.isCurrent="${model.label == item.label}"></sly>
+                                <li class="${isCurrent ? 'is-active' : ''}"
                                     data-target="${item.label}">
                                     <a>
                                         <sly data-sly-test="${item.addIcon && item.icon}">
-                                                <span class="icon ${item.containerSize}"><i class="${item.iconLibType} ${item.iconSize} ${item.mappedIcon}"
+                                                <span class="icon ${isCurrent ? model.containerSize : ''}"><i class="${item.iconLibType} ${item.iconSize} ${isCurrent ? model.mappedIcon : ''}"
                                                                                aria-hidden="true"></i></span>
                                         </sly>
                                         <span>${item.label}</span>
