WSIO-132 Service for contact form

--- a/application/backend/src/main/resources/libs/bulma/components/contactform/contactform.html
+++ b/application/backend/src/main/resources/libs/bulma/components/contactform/contactform.html
@@ -41,7 +41,7 @@
         <div class="field">
           <label class="label">Full Name</label>
           <div class="control">
-            <input class="input" type="text" name="subject" placeholder="Full Name" required>
+            <input class="input" type="text" name="name" placeholder="Full Name" required>
           </div>
         </div>
 
