WOS-211 POC reading dialog to find out possible field values

--- a/application/backend/src/main/resources/libs/bulma/components/title/title.html
+++ b/application/backend/src/main/resources/libs/bulma/components/title/title.html
@@ -19,6 +19,7 @@
 <sly data-sly-use.model="pl.ds.bulma.components.models.TitleComponent">
   <h1 id="${model.anchorId}" data-sly-element="${model.element}" class="${model.titleClasses @ join=' '}">
     ${model.text}
+    ${model.myTest}
   </h1>
   <sly data-sly-test="${model.addSubtitle}">
     <h1 data-sly-element="${model.element}" class="${model.subtitleClasses @ join=' '}">
