--- a/application/backend/src/main/resources/libs/kyanite/components/page/body.html
+++ b/application/backend/src/main/resources/libs/kyanite/components/page/body.html
@@ -16,9 +16,13 @@
   ~
 */-->
 
-<sly data-sly-set.navbarFixed="${properties.navbarFixed}"></sly>
-<sly data-sly-set.position="${properties.navbarFixedPosition}"></sly>
+<sly data-sly-use.extra="pl.ds.kyanite.components.models.PageComponent">
+  <sly data-sly-set.templateMarker="template-${extra.templateName}"></sly>
+  <sly data-sly-set.pageMarker="page-${extra.pageName}"></sly>
+  <sly data-sly-set.navbarFixed="${properties.navbarFixed ? properties.navbarFixedPosition : ''}"></sly>
+  <sly data-sly-set.fancyBackground="${properties.fancyBackground ? 'feat-fancy-bg' : ''}"></sly>
 
-<body class="${properties.defaultTemplateCSS} ${navbarFixed ? position : ''}">
-<sly data-sly-include="body-content.html"></sly>
-</body>
+  <body class="${properties.defaultTemplateCSS} ${templateMarker} ${pageMarker} ${navbarFixed} ${fancyBackground}">
+  <sly data-sly-include="body-content.html"></sly>
+  </body>
+</sly>
