--- a/application/backend/src/main/resources/libs/kyanite/components/navbar/navbaritem/navbaritem.html
+++ b/application/backend/src/main/resources/libs/kyanite/components/navbar/navbaritem/navbaritem.html
@@ -16,7 +16,7 @@
   ~
 */-->
 
-<sly data-sly-use.model="pl.ds.kyanite.components.models.navbar.NavbarItemComponent">
+<sly data-sly-use.model="pl.ds.website.websight.models.navbar.NavbarItemComponent">
   <sly data-sly-test="${model.type == 'link'}">
     <a class="navbar-item" href="${model.url}">
         <sly data-sly-test="${model.addIcon && model.icon}">
@@ -26,7 +26,10 @@
     </a>
   </sly>
   <sly data-sly-test="${model.type == 'image'}">
-    <a class="navbar-item">
+    <a data-sly-test="${!model.isLink}" class="navbar-item">
+      <img src="${model.image.src}" width="${model.imageWidth}" height="${model.imageHeight}"
+           alt="${model.image.alt}"></a>
+    <a data-sly-test="${model.isLink}" class="navbar-item" href="${model.imageUrl}" target="${model.openInNewTab && model.imageUrl != '' ? '_blank' : ''}">
       <img src="${model.image.src}" width="${model.imageWidth}" height="${model.imageHeight}"
            alt="${model.image.alt}">
     </a>
