Fixed the Navbar component. Moved the Title component. Moved Video component.

--- a/application/backend/src/main/resources/libs/kyanite/components/title/title.html
+++ b/application/backend/src/main/resources/libs/kyanite/components/title/title.html
@@ -17,8 +17,13 @@
 */-->
 
 <sly data-sly-use.model="pl.ds.kyanite.components.models.TitleComponent">
-  <h1 id="${model.anchorId}" data-sly-element="${model.element}" class="${model.titleClasses @ join=' '}">
-    ${model.text}
+  <sly data-sly-test="${model.addEyebrow}">
+    <h6 class="has-text-primary is-1 eyebrow">
+      ${model.eyebrowText}
+    </h6>
+  </sly>
+  <h1 id="${model.anchorId}" style="text-align: ${model.titleAlign @ context='styleToken'};" data-sly-element="${model.element}" class="${model.titleClasses @ join=' '}">
+    ${model.textAsOneLine @ context='html'}
   </h1>
   <sly data-sly-test="${model.addSubtitle}">
     <h1 data-sly-element="${model.element}" class="${model.subtitleClasses @ join=' '}">
