Fix some components

--- a/application/backend/src/main/resources/libs/kyanite/components/navbar/navbaritem/navbaritem.html
+++ b/application/backend/src/main/resources/libs/kyanite/components/navbar/navbaritem/navbaritem.html
@@ -16,7 +16,7 @@
   ~
 */-->
 
-<sly data-sly-use.model="pl.ds.website.websight.models.navbar.NavbarItemComponent">
+<sly data-sly-use.model="pl.ds.kyanite.components.models.navbar.NavbarItemComponent">
   <sly data-sly-test="${model.type == 'link'}">
     <a class="navbar-item" href="${model.url}">
         <sly data-sly-test="${model.addIcon && model.icon}">
