--- a/applications/blog/backend/src/main/resources/libs/kyanite/components/blogarticleauthorbio/blogarticleauthorbio.html
+++ b/applications/blog/backend/src/main/resources/libs/kyanite/components/blogarticleauthorbio/blogarticleauthorbio.html
@@ -16,7 +16,7 @@
   ~
 */-->
 
-<sly data-sly-use.model="pl.ds.website.websight.models.BlogArticleAuthorBioComponent"
+<sly data-sly-use.model="pl.ds.kyanite.components.models.BlogArticleAuthorBioComponent"
      data-sly-test.blog=${model.blogArticleHeaderModel}>
   <div class="container blog-article-author-bio">
     <article class="id media">
