--- a/applications/blog/backend/src/main/resources/libs/kyanite/components/blogarticleheader/blogarticleheader.html
+++ b/applications/blog/backend/src/main/resources/libs/kyanite/components/blogarticleheader/blogarticleheader.html
@@ -16,7 +16,7 @@
   ~
 */-->
 
-<sly data-sly-use.model="pl.ds.website.websight.models.BlogArticleHeaderComponent"
+<sly data-sly-use.model="pl.ds.kyanite.components.models.BlogArticleHeaderComponent"
      data-sly-test.blog=${model.blogArticleHeaderModel}>
   <div class="container blog-article-header">
     <div class="tags are-normal">
