--- a/applications/blog/backend/src/main/resources/libs/kyanite/components/bloglist/bloglist.html
+++ b/applications/blog/backend/src/main/resources/libs/kyanite/components/bloglist/bloglist.html
@@ -16,7 +16,7 @@
   ~
 */-->
 
-<sly data-sly-use.model="pl.ds.website.websight.models.BlogListComponent">
+<sly data-sly-use.model="pl.ds.kyanite.components.models.BlogListComponent">
   <div class="columns is-multiline is-desktop">
     <sly data-sly-list="${model.blogArticles}">
       <a href="${item.link}" class="column is-4-desktop article-thumbnail">
