--- a/applications/blog/backend/src/main/resources/libs/kyanite/components/blogpostbackbutton/blogpostbackbutton.html
+++ b/applications/blog/backend/src/main/resources/libs/kyanite/components/blogpostbackbutton/blogpostbackbutton.html
@@ -16,7 +16,7 @@
   ~
 */-->
 
-<sly data-sly-use.model="pl.ds.website.websight.models.BlogPostBackButtonComponent">
+<sly data-sly-use.model="pl.ds.kyanite.components.models.BlogPostBackButtonComponent">
   <a href="${model.link}" class="blog-back-button">
     <span class="mdi mdi-arrow-left"></span>
     <span>All blog articles</span>
