--- a/applications/blog/backend/src/main/resources/libs/kyanite/components/blogposttableofcontents/blogposttableofcontents.html
+++ b/applications/blog/backend/src/main/resources/libs/kyanite/components/blogposttableofcontents/blogposttableofcontents.html
@@ -16,7 +16,7 @@
   ~
 */-->
 
-<sly data-sly-use.model="pl.ds.website.websight.models.BlogPostTableOfContentsComponent">
+<sly data-sly-use.model="pl.ds.kyanite.components.models.BlogPostTableOfContentsComponent">
     <div data-sly-test="${model.items}" class="blog-table-of-content">
         <label class="table-label">${model.title}</label>
         <ul class="table-content-list">
