KYAN-19 Configuration for analytics script

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/body-content.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/body-content.html
@@ -18,8 +18,9 @@
 
 <sly data-sly-resource="${'pagecontainer' @ resourceType=properties.resourceType}"></sly>
 
+<sly data-sly-use.model="pl.ds.kyanite.common.components.helpers.PageModel"></sly>
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M2B8LK4"
+<noscript data-sly-test="${model.hasAnalyticsUrl}"><iframe src="${model.googleAnalyticsUrl}"
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
