Missing styles changes

--- a/applications/common/frontend/src/atomic-design-system/00-token/t.color/t.color.scss
+++ b/applications/common/frontend/src/atomic-design-system/00-token/t.color/t.color.scss
@@ -114,6 +114,10 @@ $map_t-color-by-id: (
   info--1000: #002c4d,
 );
 
+$map_t-color-shadows: (
+  shadow--1: #605e78,
+);
+
 @mixin t-color($id, $shade) {
   color: map.get(
     $map_t-color-by-id,
