--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.image.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.image.scss
@@ -29,4 +29,26 @@
     height: 160px;
     width: 160px;
   }
+
+  &.is-16by9,
+  &.is-1by1,
+  &.is-1by2,
+  &.is-1by3,
+  &.is-2by1,
+  &.is-2by3,
+  &.is-3by1,
+  &.is-3by2,
+  &.is-3by4,
+  &.is-3by5,
+  &.is-4by3,
+  &.is-4by5,
+  &.is-5by3,
+  &.is-5by4,
+  &.is-9by16,
+  &.is-square {
+    svg {
+      inset: 0;
+      position: absolute;
+    }
+  }
 }
