--- a/applications/common/frontend/src/components/Image/Image.scss
+++ b/applications/common/frontend/src/components/Image/Image.scss
@@ -16,10 +16,22 @@
  * -->
  */
 
+@use 'sass:map';
+
 @use 'src/atomic-design-system/01-atom/a.image' as image;
+@use 'src/atomic-design-system/00-token/t.color' as color;
+@use 'src/bulma-overwrite/variables' as spacing;
+
+$color-shadow-start: rgba(color.$black, 0.06);
+$color-shadow-end: rgba(map.get(color.$map_t-color-shadows, 'shadow--1'), 0.07);
 
 .image {
   @include image.a-image;
+
+  &.has-shadow {
+    box-shadow: 0 3.1015px 19.2293px 4.3421px $color-shadow-start,
+      0 0.6203px 2.4812px $color-shadow-end;
+  }
 
   > svg {
     width: 100%; // or inline attribute width gets applied
