--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/body.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/body.html
@@ -22,7 +22,7 @@
   <sly data-sly-set.navbarFixed="${properties.navbarFixed ? properties.navbarFixedPosition : ''}"></sly>
   <sly data-sly-set.fancyBackground="${properties.fancyBackground ? 'feat-fancy-bg' : ''}"></sly>
 
-  <body class="${properties.defaultTemplateCSS} ${templateMarker} ${pageMarker} ${navbarFixed} ${fancyBackground}">
+  <body class="${properties.defaultTemplateCSS} ${templateMarker} ${pageMarker} ${navbarFixed} ${fancyBackground} ${properties.pageBackground}">
   <sly data-sly-include="body-content.html"></sly>
   </body>
 </sly>
