KYAN-19 Configuration for analytics script

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/head-libs.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/head-libs.html
@@ -18,7 +18,7 @@
 
 <sly data-sly-use.model="pl.ds.kyanite.common.components.helpers.PageModel"></sly>
 <!-- Google Tag Manager -->
-<script type="text/plain" data-cookiecategory="analytics">
+<script data-sly-test="${model.hasAnalyticsUrl}" type="text/plain" data-cookiecategory="analytics">
   (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
       j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
