WSIO-314 css mixin rename

--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.hero/o.hero.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.hero/o.hero.scss
@@ -26,7 +26,7 @@
 
 @mixin o-hero {
   &.hero--bg-circles {
-    @include o-hero-background.o-background;
+    @include o-hero-background.o-background-circles;
   }
 
   .hero-body {
