--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.hero-background/o.hero-background.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.hero-background/o.hero-background.scss
@@ -53,7 +53,7 @@ $offset-y: $size * 0.5;
   background: #{$backgrounds};
 }
 
-@mixin o-background {
+@mixin o-background-circles {
   @at-root {
     // container
     & {
