KYAN-31 updated cms version + fixed e2e tests

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/body.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/body.html
@@ -21,7 +21,7 @@
   <sly data-sly-set.pageMarker="page-${extra.pageName}"></sly>
   <sly data-sly-set.navbarFixed="${properties.navbarFixed ? properties.navbarFixedPosition : ''}"></sly>
 
-  <body class="${properties.defaultTemplateCSS} ${templateMarker} ${pageMarker} ${navbarFixed} ${properties.pageBackground}">
+  <body class="${properties.defaultTemplateCSS} ${templateMarker} ${pageMarker} ${navbarFixed} ${properties.background}">
   <sly data-sly-include="body-content.html"></sly>
   </body>
 </sly>
