KYAN-39 fe configurable page background

--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.body-background/_index.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.body-background/_index.scss
@@ -16,5 +16,5 @@
  * -->
  */
 
-@forward 'o.body-background--hero-lines';
+@forward 'o.body-background--lines';
 @forward 'o.body-background--squares';
