--- a/applications/common/frontend/src/atomic-design-system/05-page/p.page/_index.scss
+++ b/applications/common/frontend/src/atomic-design-system/05-page/p.page/_index.scss
@@ -16,9 +16,4 @@
  * -->
  */
 
-@use 'src/atomic-design-system/03-organism/o.body-background' as
-  o-body-background;
-
-body.page-partners.feat-fancy-bg {
-  @include o-body-background.o-body-background--squares;
-}
+@forward 'p.page';
