KYAN-17 Added global css variables.

--- a/applications/common/frontend/src/main.scss
+++ b/applications/common/frontend/src/main.scss
@@ -15,7 +15,7 @@
  *     limitations under the License.
  * -->
  */
-
+@use 'src/global-variables';
 @use 'src/bulma-overwrite';
 @use 'src/components';
 @use 'src/atomic-design-system/04-template' as template;
