--- a/applications/common/frontend/src/global-variables.scss
+++ b/applications/common/frontend/src/global-variables.scss
@@ -21,30 +21,30 @@
 @use 'src/atomic-design-system/00-token/t.position' as positions;
 @use 'src/bulma-overwrite/variables' as variables;
 
-@mixin add-css-variables($module, $short-name) {  
-    @each $key, $value in $module {
+@mixin add-css-variables($map, $short-name) {  
+    @each $key, $value in $map {
         --#{$short-name}-#{$key}: #{$value};
     }
  }
 
  :root {
     // Borders from: src/atomic-design-system/00-token/t.border
-    @include add-css-variables(borders.$map_t-border-radius, t-border-weight);
-    @include add-css-variables(borders.$map_t-border-radius, t-border-radius);
+    @include add-css-variables(borders.$map_t-border-radius, border-weight);
+    @include add-css-variables(borders.$map_t-border-radius, border-radius);
 
     // Breakpoints from: src/atomic-design-system/00-token/t.breakpoint
-    @include add-css-variables(breakpoints.$map_t-breakpoints-px, t-breakpoint);
+    @include add-css-variables(breakpoints.$map_t-breakpoints-px, breakpoint);
 
     // Colors from: src/atomic-design-system/00-token/t.color
-    @include add-css-variables(colors.$map_t-color-by-id, t-color);
-    @include add-css-variables(colors.$map_t-color-shadows, t-color);
+    @include add-css-variables(colors.$map_t-color-by-id, color);
+    @include add-css-variables(colors.$map_t-color-shadows, color);
 
      // Fonts from: src/atomic-design-system/00-token/t.color
-     @include add-css-variables(fonts.$map_t-fonts, t-font);
-     @include add-css-variables(fonts.$map_t-font-sizes, t-font-size);
-     @include add-css-variables(fonts.$map_t-font-weights, t-font-weight);
-     @include add-css-variables(fonts.$map_t-letter-spacings, t-letter-spacing);
-     @include add-css-variables(fonts.$map_t-line-heights, t-line-height);
+     @include add-css-variables(fonts.$map_t-fonts, font);
+     @include add-css-variables(fonts.$map_t-font-sizes, font-size);
+     @include add-css-variables(fonts.$map_t-font-weights, font-weight);
+     @include add-css-variables(fonts.$map_t-letter-spacings, letter-spacing);
+     @include add-css-variables(fonts.$map_t-line-heights, line-height);
 
     // Bulma overwited variables from: src/bulma-overwrite/variables
     @include add-css-variables(variables.$spacing-values, spacing-value);
